# MyXTP

./: CMakeLists.txt  README.md
api/: ConfigZt1Blacklist.txt  Encrypt.lib  config.json  setting.json
api/backup/: config.json
src/: CMakeLists.txt  Encrypt.h  FileUtils.cpp  FileUtils.h  Strategy.cpp  Strategy.h  quote_spi.cpp  trade_spi.cpp  trade_spi.h  xtp_api_demo.cpp
